
The following changes to UNRELEASED features were made during the development
cycle (Nvim HEAD, the "master" branch).

EVENTS

• Renamed "nvim.find_exrc" |default-autocmds| group to "nvim.exrc".

EXPERIMENTS

• todo

LSP

• |vim.lsp.buf.selection_range()| now accepts an integer which specifies its
  direction, rather than a string `'outer'` or `'inner'`.

OPTIONS

• todo

TREESITTER

• todo

==============================================================================
BREAKING CHANGES                                                *news-breaking*

These changes may require adaptations in your config or plugins.

API

• todo

BUILD

• todo

DIAGNOSTICS

• |diagnostic-signs| can no longer be configured with |:sign-define| or
  |sign_define()| (deprecated in Nvim 0.10 |deprecated-0.10|).
• |vim.diagnostic.disable()| and |vim.diagnostic.is_disabled()| (deprecated in
  Nvim 0.10 |deprecated-0.10|) are removed.
• The legacy signature of |vim.diagnostic.enable()| (deprecated in Nvim 0.10
  |deprecated-0.10|) is no longer supported.

EDITOR

• todo

EVENTS

• |ui-messages| no longer emits the `msg_show.return_prompt`, and
  `msg_history_clear` events. The `msg_clear` event was repurposed and is now
  emitted after the screen is cleared. These events arbitrarily assumed a
  message UI that mimicks the legacy message grid. Benefit: reduced UI event
  traffic and more flexibility for UIs.
  The `msg_history_show` event has an additional "prev_cmd" argument.
• A new `empty` message kind is emitted for an empty (e.g. `:echo ""`) message.

HIGHLIGHTS

• todo

LSP

• `root_markers` in |vim.lsp.Config| can now be ordered by priority.
• The function set with |vim.lsp.log.set_format_func()| is now given all
  arguments corresponding to a log entry instead of the individual arguments.
• `vim.lsp.semantic_tokens.start/stop` now renamed to
  `vim.lsp.semantic_tokens.enable`
• Missing fields in LSP messages are now represented using |vim.NIL| instead of nil.