@@ -825,7 +825,7 @@ will be set to zero, but can be changed and used for the replacing cmdline or
 message window. Cmdline state is emitted as |ui-cmdline| events, which the UI
 must handle.
 
-["msg_show", kind, content, replace_last, history, append, msg_id, progress] ~
+["msg_show", kind, content, replace_last, history, append, msg_id] ~
 	Display a message to the user.
 
 	kind
@@ -885,18 +885,6 @@ must handle.
 	msg_id
 	    Unique identifier for the message. It can either be an integer or
 	    string. When message of same id appears it should replace the older message.
-
-	progress
-	    Progress-message properties:
-	       • title: Title string of the progress message.
-	       • status: Status of the progress message. Can contain one of
-	         the following values
-	            • success: The progress item completed successfully
-	            • running: The progress is ongoing
-	            • failed: The progress item failed
-	            • cancel: The progressing process should be canceled.
-	       • percent: How much progress is done on the progress
-                     message
 
 ["msg_clear"] ~
 	Clear all messages currently displayed by "msg_show", emitted after
