@@ -39,6 +39,11 @@ TREESITTER
 
 • todo
 
+UI
+
+• `progress` attribute removed form |ui-messages| msg_show event
+
+
 ==============================================================================
 BREAKING CHANGES                                                *news-breaking*
 
@@ -190,7 +195,7 @@ EVENTS
 
 • |CmdlineLeavePre| triggered before preparing to leave the command line.
 • New `append` paremeter for |ui-messages| `msg_show` event.
-• New `msg_id` and `progress` paremeter for |ui-messages| `msg_show` event.
+• New `msg_id` paremeter for |ui-messages| `msg_show` event.
 • Creating or updating a progress message with |nvim_echo()| triggers a |Progress| event.
 
 HIGHLIGHTS
